[package]
name = "peach-oled"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-test = "11.0.0"
linux-embedded-hal = "0.2.2"
embedded-graphics = "0.4.7"
tinybmp = "0.1.0"
ssd1306 = "0.2.4"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
failure = "0.1.5"
validator = "0.8.0"
validator_derive = "0.8.0"
log = "0.4.0"
env_logger = "0.6.1"
